        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=15514
        <clipPath> with <use> not respected
        http://bugs.webkit.org/show_bug.cgi?id=16557
        SVG circle elements have been clipped away completely, instead of partially.

        Add toClipPath to get clip path data for the clipping paths. Implement it for <use>, thereby allowing clip paths using use.



Canonical link: https://commits.webkit.org/22830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28991 268f45cc-cd09-0410-ab3c-d52691b4dbfc